# context-engineering-MCP

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README_EN.md  SECURITY.md  SETUP_GUIDE.md  VERIFY.md  install-private.sh  install.sh  pyproject.toml  start_all_services.sh  test_pure_mcp.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
context_engineering_mcp/: __init__.py  cli.py  mcp_server.py  post_install.py  pure_mcp_server.py  pure_mcp_server_v2.py  setup.py  simple_mcp_server.py
mcp-server/: package.json  standalone_mcp_server.js
